# fformation-rsb

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
app/: classificator.cpp
src/: ConversationalGroupTracker.cpp  ConversationalGroupTracker.h  Macros.cpp  Macros.h  RsbClassificator.cpp  RsbClassificator.h
